--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "version": "0.1.2-dev",
-    "name": "com.gosyntactix.cordova.testflightdetector",
-    "cordova_name": "TestFlight Detector",
-    "description": "Detects if app was installed via TestFlight vs. Apple App Store",
+    "name": "london.jambuster.cordova.testflightdetector",
+    "cordova_name": "XCode Detector",
+    "description": "Detects if app was installed via Xcode or not",
     "license": "Apache 2.0",
-    "repo": "https://github.com/Arcticus/Cordova-Plugin---Test-Flight-Detector.git",
-    "issue": "https://github.com/Arcticus/Cordova-Plugin---Test-Flight-Detector/issues",
+    "repo": " https://github.com/rwillett/Cordova-Plugin---Test-Flight-Detector.git",
+    "issue": " https://github.com/rwillett/Cordova-Plugin---Test-Flight-Detector/issues",
     "keywords": [
         "cordova",
         "testflight"
