--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "version": "0.1.2",
-    "name": "london.jambuster.cordova.testflightdetector",
+    "name": "london.jambuster.cordova.xcodedetector",
     "cordova_name": "XCode Detector",
     "description": "Detects if app was installed via Xcode or not",
     "license": "Apache 2.0",
